// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI Structure/> renders the base column with no extra settings passed 1`] = `
<div
  className="xui-column-12-of-12"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> renders the base row with no extra settings passed 1`] = `
<div
  className="xui-row"
>
  Testing 💩
</div>
`;

exports[`<XUI Structure/> renders the column with wide and medium column widths, if provided 1`] = `
<div
  className="xui-column-12-of-12 xui-column-3-of-12-medium xui-column-6-of-12-wide"
>
  Testing 💩
</div>
`;
